Fix font-weight for new font
SC has a new font which in `sc-font-body` instances is very thin, which is hard to read on dark backgrounds.

--- a/css_dark.css
+++ b/css_dark.css
@@ -161,3 +161,4 @@ textarea, select, input{background: #000 !important}
 .commentFormDisabled{background-color: black !important;} /* Fixes background of Comments Disabled box */
 .streamHTUpsell{background-color: #292929 !important;} /* In-stream banners */
 .emptyNetworkPage__image{filter: invert(80%) !important;} /* Fix empty profile page */
+.sc-font-body{font-weight: 500 !important;} /* Make body font slightly thicker for readability */
